= Changelog


== development

* ADDED: :base_uri initialization option allows to create a new instance specifying a custom base_uri for all API calls. This is useful, for example, if you want to use ma.gno.lia Mirror'd APIs (http://wiki.ma.gnolia.com/Mirror%27d_API) instead the del.icio.us one (thanks to Jörg Battermann).

* FIXED: a wrong indentation in README file causes all list items to be rendered as source code.

* CHANGED: improved documentation and added more examples (closes #21).


== Release 0.1.0 (2008-05-11)

* Initial public release.